[gd_scene load_steps=29 format=2]

[ext_resource path="res://assents purple/assents purple (2)/asen/New Piskel (3).png" type="Texture" id=1]
[ext_resource path="res://assents purple/assents purple (2)/asen/espin.png" type="Texture" id=2]
[ext_resource path="res://shutterstock_1833533875.jpg" type="Texture" id=3]
[ext_resource path="res://assents/microFantasy.v0.1/tilesets/topdown.png" type="Texture" id=4]
[ext_resource path="res://assents purple/assents purple (2)/asen/New Piskel (4).png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://src2/Battle.tscn" type="PackedScene" id=7]
[ext_resource path="res://GAME MAPAS/mapas/plataforma.tscn" type="PackedScene" id=8]
[ext_resource path="res://assents purple/assents purple (2)/asen/1560881.png" type="Texture" id=9]
[ext_resource path="res://assents purple/assents purple (2)/asen/New Piskel (2).png" type="Texture" id=10]
[ext_resource path="res://GAME MAPAS/Scripts/plataforma2lent.gd" type="Script" id=11]
[ext_resource path="res://src/Objects/Coin.tscn" type="PackedScene" id=12]
[ext_resource path="res://GAME MAPAS/mapas/baularge.tscn" type="PackedScene" id=13]
[ext_resource path="res://MUSIC/toby fox - UNDERTALE Soundtrack - 06 Uwa!! So Temperate.mp3.mp3" type="AudioStream" id=14]
[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://GAME MAPAS/Scripts/Reset_Level.gd" type="Script" id=16]
[ext_resource path="res://Sounds/mixkit-game-treasure-coin-2038.wav" type="AudioStream" id=17]
[ext_resource path="res://GAME MAPAS/mapas/baumid.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Actors/Enemy.tscn" type="PackedScene" id=19]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "topdown.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "New Piskel (3).png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "espin.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "New Piskel (4).png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 3 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "New Piskel (2).png 4"
4/texture = ExtResource( 10 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "1560881.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 48, 112, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "topdown.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 16, 32, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "topdown.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 16, 32, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 8 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "topdown.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 32, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( 62.4999, 263 )
b = Vector2( 923.473, 263.271 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 11.75, 2 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15, 20 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 18, 13.75 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 16 )

[node name="1560881" type="Sprite" parent="."]
position = Vector2( 480, 384 )
scale = Vector2( 1.3064, 1.31096 )
texture = ExtResource( 9 )

[node name="Shutterstock1833533875" type="Sprite" parent="."]
self_modulate = Color( 0.513726, 0.203922, 0.745098, 1 )
position = Vector2( 510.5, 297.847 )
scale = Vector2( 0.337667, 0.365158 )
texture = ExtResource( 3 )

[node name="plataforma2" type="Node2D" parent="."]

[node name="plataforma" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 53.115, -7.796 )
scale = Vector2( 0.546, 1 )
distance = 250

[node name="plataforma3" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 352, 32 )
distance = 250

[node name="plataforma4" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 765.024, 185.724 )
horizontal = false

[node name="plataforma5" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 400, 375.997 )
scale = Vector2( 0.84, 1 )
horizontal = false

[node name="plataforma6" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 252.851, 384 )
scale = Vector2( 0.379462, 0.915396 )
distance = -300

[node name="moving plat2" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 8, 456 )
scale = Vector2( 0.12, 1 )
horizontal = false
distance = 300

[node name="moving plat lent" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 34, 184 )
scale = Vector2( 0.48, 1 )
script = ExtResource( 11 )
speed = 40.0

[node name="plataforma7" parent="plataforma2" instance=ExtResource( 8 )]
position = Vector2( 126.715, 473.077 )
speed = 22.0
distance = 640

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 13
collision_mask = 13
format = 1
tile_data = PoolIntArray( -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196580, 0, 0, -196579, 0, 0, -196578, 0, 0, -196577, 0, 0, -196576, 0, 0, -196575, 0, 0, -196574, 0, 0, -196573, 0, 0, -196572, 0, 0, -196571, 0, 0, -196570, 0, 0, -196569, 0, 0, -196568, 0, 0, -196567, 0, 0, -196566, 0, 0, -196565, 0, 0, -196564, 0, 0, -196563, 0, 0, -196562, 0, 0, -196561, 0, 0, -196560, 0, 0, -196559, 0, 0, -196558, 0, 0, -196557, 0, 0, -196556, 0, 0, -196555, 0, 0, -196554, 0, 0, -196553, 0, 0, -196552, 0, 0, -196551, 0, 0, -196550, 0, 0, -196549, 0, 0, -196548, 0, 0, -196547, 0, 0, -196546, 0, 0, -196545, 0, 0, -131072, 0, 0, -131009, 0, 0, -65536, 0, 0, -65473, 0, 0, 0, 0, 0, 63, 0, 0, 65536, 0, 0, 65599, 0, 0, 131072, 0, 0, 131073, 0, 0, 131135, 0, 0, 196608, 0, 0, 196610, 0, 0, 196671, 0, 0, 262144, 0, 0, 262146, 0, 0, 262207, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327741, 0, 0, 327742, 0, 0, 327743, 0, 0, 393216, 0, 0, 393279, 0, 0, 458752, 0, 0, 458756, 0, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458815, 0, 0, 524288, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524351, 0, 0, 589824, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589887, 0, 0, 655360, 0, 0, 655423, 0, 0, 720896, 0, 0, 720959, 0, 0, 786432, 0, 0, 786465, 0, 0, 786495, 0, 0, 851968, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852031, 0, 0, 917504, 0, 0, 917567, 0, 0, 983040, 0, 0, 983067, 0, 0, 983103, 0, 0, 1048576, 0, 0, 1048639, 0, 0, 1114112, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 1114160, 0, 0, 1114161, 0, 0, 1114175, 0, 0, 1179648, 0, 0, 1179698, 1, 0, 1179699, 1, 0, 1179700, 1, 0, 1179701, 1, 0, 1179702, 1, 0, 1179703, 1, 0, 1179704, 1, 0, 1179705, 1, 0, 1179706, 1, 0, 1179707, 1, 0, 1179708, 1, 0, 1179709, 1, 0, 1179710, 0, 0, 1179711, 0, 0, 1245184, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245243, 0, 0, 1245244, 0, 0, 1245245, 0, 0, 1245247, 0, 0, 1310720, 0, 0, 1310783, 0, 0, 1376256, 0, 0, 1376319, 0, 0, 1441792, 0, 0, 1441855, 0, 0, 1507328, 0, 0, 1507389, 0, 0, 1507390, 0, 0, 1507391, 0, 0, 1572864, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572927, 0, 0, 1638400, 0, 0, 1638442, 0, 0, 1638443, 0, 0, 1638463, 0, 0, 1703936, 0, 0, 1703999, 0, 0, 1769472, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769520, 1, 0, 1769521, 1, 0, 1769522, 1, 0, 1769523, 1, 0, 1769524, 0, 0, 1769525, 1, 0, 1769526, 1, 0, 1769527, 1, 0, 1769528, 1, 0, 1769529, 0, 0, 1769530, 1, 0, 1769531, 1, 0, 1769532, 1, 0, 1769533, 1, 0, 1769534, 1, 0, 1769535, 0, 0, 1835008, 0, 0, 1835056, 0, 0, 1835057, 0, 0, 1835058, 0, 0, 1835059, 0, 0, 1835060, 0, 0, 1835061, 0, 0, 1835062, 0, 0, 1835063, 0, 0, 1835064, 0, 0, 1835065, 0, 0, 1835066, 0, 0, 1835067, 0, 0, 1835068, 0, 0, 1835069, 0, 0, 1835070, 0, 0, 1835071, 0, 0, 1900544, 0, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 0, 0, 1900568, 0, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900607, 0, 0, 1966080, 0, 0, 1966143, 0, 0, 2031616, 0, 0, 2031678, 0, 0, 2031679, 0, 0, 2097152, 0, 0, 2097214, 5, 0, 2097215, 0, 0, 2162688, 0, 0, 2162750, 5, 0, 2162751, 0, 0, 2228224, 0, 0, 2228248, 0, 0, 2228260, 0, 0, 2228275, 0, 0, 2228284, 0, 0, 2228285, 0, 0, 2228286, 0, 0, 2228287, 0, 0, 2293760, 0, 0, 2293761, 0, 0, 2293762, 0, 0, 2293763, 0, 0, 2293764, 0, 0, 2293765, 0, 0, 2293766, 0, 0, 2293767, 0, 0, 2293768, 0, 0, 2293769, 0, 0, 2293770, 0, 0, 2293823, 0, 0, 2359296, 0, 0, 2359359, 0, 0, 2424832, 0, 0, 2424895, 0, 0, 2490368, 0, 0, 2490431, 0, 0, 2555904, 0, 0, 2555967, 0, 0 )

[node name="morte" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="morte"]
position = Vector2( -54, 332 )
scale = Vector2( 1.0996, 0.992828 )
shape = SubResource( 9 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="morte"]
position = Vector2( 62, -141 )
scale = Vector2( 0.280002, 1 )
shape = SubResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="morte"]
position = Vector2( 364, -122 )
scale = Vector2( 0.333, 1 )
shape = SubResource( 9 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="morte"]
position = Vector2( 788, 35 )
scale = Vector2( 0.225, 1 )
shape = SubResource( 9 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="morte"]
position = Vector2( 749, 179 )
scale = Vector2( 0.279992, 1 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="morte"]
position = Vector2( 25, 566 )
shape = SubResource( 10 )

[node name="Fundo_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -5.0
pitch_scale = 0.95

[node name="Key_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 15 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 63, 81 )
collision_layer = 2147505153
collision_mask = 2147505182

[node name="Battle" parent="Player" instance=ExtResource( 7 )]
visible = false

[node name="Coin" parent="." instance=ExtResource( 12 )]
position = Vector2( 346, 54 )

[node name="Coin2" parent="." instance=ExtResource( 12 )]
position = Vector2( 703, 528 )

[node name="Coin3" parent="." instance=ExtResource( 12 )]
position = Vector2( 180, 241 )

[node name="Coin4" parent="." instance=ExtResource( 12 )]
position = Vector2( 544, 71 )

[node name="Coin5" parent="." instance=ExtResource( 12 )]
position = Vector2( 899, 37 )

[node name="Coin6" parent="." instance=ExtResource( 12 )]
position = Vector2( 883, 390 )

[node name="Coin7" parent="." instance=ExtResource( 12 )]
position = Vector2( 691, 363 )

[node name="Coin8" parent="." instance=ExtResource( 12 )]
position = Vector2( 492, 199 )

[node name="Coin9" parent="." instance=ExtResource( 12 )]
position = Vector2( 28, 217 )

[node name="Coin10" parent="." instance=ExtResource( 12 )]
position = Vector2( 259, 536 )

[node name="baularge" parent="." instance=ExtResource( 13 )]
position = Vector2( 521, 200 )

[node name="baularge2" parent="." instance=ExtResource( 13 )]
position = Vector2( 72, 552 )

[node name="baumid" parent="." instance=ExtResource( 18 )]
position = Vector2( 1000, 72 )

[node name="baumid2" parent="." instance=ExtResource( 18 )]
position = Vector2( 1000, 360 )

[node name="Instrucao" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Instrucao"]
position = Vector2( 64, 61 )
shape = SubResource( 11 )

[node name="Enemy3" parent="." instance=ExtResource( 19 )]
position = Vector2( 368, 453 )

[node name="Area2D3" type="Area2D" parent="Enemy3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy3/Area2D3"]
shape = SubResource( 12 )

[node name="Enemy" parent="." instance=ExtResource( 19 )]
position = Vector2( 698, 263 )

[node name="Area2D1" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D1"]
shape = SubResource( 12 )

[node name="Enemy2" parent="." instance=ExtResource( 19 )]
position = Vector2( 325, 263 )

[node name="Area2D2" type="Area2D" parent="Enemy2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy2/Area2D2"]
shape = SubResource( 12 )

[node name="Enemy4" parent="." instance=ExtResource( 19 )]
position = Vector2( 133, 551 )

[node name="Area2D4" type="Area2D" parent="Enemy4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy4/Area2D4"]
shape = SubResource( 12 )

[connection signal="body_entered" from="morte" to="." method="_on_morte_body_entered"]
[connection signal="body_entered" from="Instrucao" to="." method="_on_Instrucao_body_entered"]
[connection signal="body_entered" from="Enemy3/Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="Enemy/Area2D1" to="." method="_on_Area2D1_body_entered"]
[connection signal="body_entered" from="Enemy2/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Enemy4/Area2D4" to="." method="_on_Area2D4_body_entered"]
